2016-04-11 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/x86/Kconfig: added parameter to chooce latency calibration
	  metrics.
	* base/arch/x86/calibration/calibrate.c: calibrate user space latency
	  according to the chosen metrics.
	* base/sched/sched.c: calibrate kernel space latency according to the 
	  chosen metrics.
	* base/arch/x86/hal/hal.c: set allowed cpus to be portable across 
	  differing Linux versions, fix printk warnings and linux version 
	  dependency of cpu_isolated_mask.

2016-04-05 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/x86/calibration/calibrate.c: added a fading memory 
	  option for the user space latency calibration and an option 
	  for playing with an alternative Hinf filtering.
	* base/sched/sched.c: added a fading memory option for the kernel
	  space latency calibration.

2016-04-04 Pierangelo Masarati <pierangelo.masarati@polimi.it>

	* base/arch/x86/Kconfig, base/arch/x86/defconfig, configure.in: 
	  redefined self-calibration macros and defaults.
	* base/sched/sched.c: added Kalman filter based kernel latency 
	  calibration, as for user space but with integer arithmetics.

2016-04-02 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/x86/calibration/calibrate.c: added a calibration through a
	  Kalman filter.

2016-03-31 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/x86/calibration/calibrate.c: save the scheduling latencies
	  in nanoseconds, to make it easier their editing.
	* base/sched/sched.c: echo diagnose of the scheduling latencies in 
	  nanoseconds, to make it easier their reading; be sure of the kernel 
	  thread server end at rmmod rtai_sched.

2016-03-30 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/x86/calibration/calibrate.c: rewrite user space support
	  for calibrating scheduling latencies on the fly.
	* base/include/rtai_lxrt.h: recast the kernel_calibrator function 
	  as a simple interface to provide kernel and user space latencies,