@@ -79,6 +79,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
+@CONFIG_BUILD_SMISPV_TRUE@bin_PROGRAMS = smispv$(EXEEXT)
 calibration_PROGRAMS = calibrate$(EXEEXT) calibration_helper$(EXEEXT)
 subdir = base/arch/x86/calibration
 DIST_COMMON = $(srcdir)/GNUmakefile.in $(srcdir)/GNUmakefile.am \
@@ -109,8 +110,8 @@ libcalibrate_rt_a_OBJECTS = $(am_libcalibrate_rt_a_OBJECTS)
 libsmi_rt_a_LIBADD =
 am_libsmi_rt_a_OBJECTS = libsmi_rt_a-smi-module.$(OBJEXT)
 libsmi_rt_a_OBJECTS = $(am_libsmi_rt_a_OBJECTS)
-am__installdirs = "$(DESTDIR)$(calibrationdir)"
-PROGRAMS = $(calibration_PROGRAMS)
+am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(calibrationdir)"
+PROGRAMS = $(bin_PROGRAMS) $(calibration_PROGRAMS)
 am_calibrate_OBJECTS = calibrate-calibrate.$(OBJEXT)
 calibrate_OBJECTS = $(am_calibrate_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
@@ -121,6 +122,10 @@ am_calibration_helper_OBJECTS =  \
 	calibration_helper-calibration_helper.$(OBJEXT)
 calibration_helper_OBJECTS = $(am_calibration_helper_OBJECTS)
 calibration_helper_DEPENDENCIES = ../../../sched/liblxrt/liblxrt.la
+am__smispv_SOURCES_DIST = smispv.c
+@CONFIG_BUILD_SMISPV_TRUE@am_smispv_OBJECTS = smispv.$(OBJEXT)
+smispv_OBJECTS = $(am_smispv_OBJECTS)
+smispv_LDADD = $(LDADD)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -156,9 +161,11 @@ am__v_CCLD_ = $(am__v_CCLD_@AM_DEFAULT_V@)
 am__v_CCLD_0 = @echo "  CCLD    " $@;
 am__v_CCLD_1 = 
 SOURCES = $(libcalibrate_rt_a_SOURCES) $(libsmi_rt_a_SOURCES) \
-	$(calibrate_SOURCES) $(calibration_helper_SOURCES)
+	$(calibrate_SOURCES) $(calibration_helper_SOURCES) \
+	$(smispv_SOURCES)
 DIST_SOURCES = $(libcalibrate_rt_a_SOURCES) $(libsmi_rt_a_SOURCES) \
-	$(calibrate_SOURCES) $(calibration_helper_SOURCES)
+	$(calibrate_SOURCES) $(calibration_helper_SOURCES) \
+	$(am__smispv_SOURCES_DIST)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -367,6 +374,7 @@ top_srcdir = @top_srcdir@
 calibrationdir = $(prefix)/calibration
 moduledir = @RTAI_MODULE_DIR@
 modext = @RTAI_MODULE_EXT@
+@CONFIG_BUILD_SMISPV_TRUE@smispv_SOURCES = smispv.c
 libcalibrate_rt_a_SOURCES = calibrate-module.c calibrate.h
 libsmi_rt_a_SOURCES = smi-module.c
 @CONFIG_KBUILD_FALSE@noinst_LIBRARIES = libcalibrate_rt.a libsmi_rt.a
@@ -459,6 +467,55 @@ libsmi_rt.a: $(libsmi_rt_a_OBJECTS) $(libsmi_rt_a_DEPENDENCIES) $(EXTRA_libsmi_r
 	$(AM_V_at)-rm -f libsmi_rt.a
 	$(AM_V_AR)$(libsmi_rt_a_AR) libsmi_rt.a $(libsmi_rt_a_OBJECTS) $(libsmi_rt_a_LIBADD)
 	$(AM_V_at)$(RANLIB) libsmi_rt.a
+install-binPROGRAMS: $(bin_PROGRAMS)
+	@$(NORMAL_INSTALL)
+	@list='$(bin_PROGRAMS)'; test -n "$(bindir)" || list=; \
+	if test -n "$$list"; then \
+	  echo " $(MKDIR_P) '$(DESTDIR)$(bindir)'"; \
+	  $(MKDIR_P) "$(DESTDIR)$(bindir)" || exit 1; \
+	fi; \
+	for p in $$list; do echo "$$p $$p"; done | \
+	sed 's/$(EXEEXT)$$//' | \
+	while read p p1; do if test -f $$p \
+	 || test -f $$p1 \
+	  ; then echo "$$p"; echo "$$p"; else :; fi; \
+	done | \
+	sed -e 'p;s,.*/,,;n;h' \
+	    -e 's|.*|.|' \
+	    -e 'p;x;s,.*/,,;s/$(EXEEXT)$$//;$(transform);s/$$/$(EXEEXT)/' | \
+	sed 'N;N;N;s,\n, ,g' | \
+	$(AWK) 'BEGIN { files["."] = ""; dirs["."] = 1 } \
+	  { d=$$3; if (dirs[d] != 1) { print "d", d; dirs[d] = 1 } \
+	    if ($$2 == $$4) files[d] = files[d] " " $$1; \
+	    else { print "f", $$3 "/" $$4, $$1; } } \
+	  END { for (d in files) print "f", d, files[d] }' | \
+	while read type dir files; do \
+	    if test "$$dir" = .; then dir=; else dir=/$$dir; fi; \
+	    test -z "$$files" || { \
+	    echo " $(INSTALL_PROGRAM_ENV) $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=install $(INSTALL_PROGRAM) $$files '$(DESTDIR)$(bindir)$$dir'"; \
+	    $(INSTALL_PROGRAM_ENV) $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=install $(INSTALL_PROGRAM) $$files "$(DESTDIR)$(bindir)$$dir" || exit $$?; \
+	    } \
+	; done
+
+uninstall-binPROGRAMS:
+	@$(NORMAL_UNINSTALL)
+	@list='$(bin_PROGRAMS)'; test -n "$(bindir)" || list=; \
+	files=`for p in $$list; do echo "$$p"; done | \
+	  sed -e 'h;s,^.*/,,;s/$(EXEEXT)$$//;$(transform)' \
+	      -e 's/$$/$(EXEEXT)/' \
+	`; \
+	test -n "$$list" || exit 0; \
+	echo " ( cd '$(DESTDIR)$(bindir)' && rm -f" $$files ")"; \
+	cd "$(DESTDIR)$(bindir)" && rm -f $$files
+
+clean-binPROGRAMS:
+	@list='$(bin_PROGRAMS)'; test -n "$$list" || exit 0; \
+	echo " rm -f" $$list; \
+	rm -f $$list || exit $$?; \
+	test -n "$(EXEEXT)" || exit 0; \
+	list=`for p in $$list; do echo "$$p"; done | sed 's/$(EXEEXT)$$//'`; \
+	echo " rm -f" $$list; \
+	rm -f $$list
 install-calibrationPROGRAMS: $(calibration_PROGRAMS)
 	@$(NORMAL_INSTALL)
 	@list='$(calibration_PROGRAMS)'; test -n "$(calibrationdir)" || list=; \
@@ -517,6 +574,10 @@ calibration_helper$(EXEEXT): $(calibration_helper_OBJECTS) $(calibration_helper_
 	@rm -f calibration_helper$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(calibration_helper_OBJECTS) $(calibration_helper_LDADD) $(LIBS)
 
+smispv$(EXEEXT): $(smispv_OBJECTS) $(smispv_DEPENDENCIES) $(EXTRA_smispv_DEPENDENCIES) 
+	@rm -f smispv$(EXEEXT)
+	$(AM_V_CCLD)$(LINK) $(smispv_OBJECTS) $(smispv_LDADD) $(LIBS)
+
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
 
@@ -527,6 +588,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/calibration_helper-calibration_helper.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcalibrate_rt_a-calibrate-module.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libsmi_rt_a-smi-module.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/smispv.Po@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	$(AM_V_CC)$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
@@ -697,7 +759,7 @@ check-am: all-am
 check: check-am
 all-am: GNUmakefile $(LIBRARIES) $(PROGRAMS) all-local
 installdirs:
-	for dir in "$(DESTDIR)$(calibrationdir)"; do \
+	for dir in "$(DESTDIR)$(bindir)" "$(DESTDIR)$(calibrationdir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -735,8 +797,8 @@ maintainer-clean-generic:
 @CONFIG_KBUILD_FALSE@clean-local:
 clean: clean-am
 
-clean-am: clean-calibrationPROGRAMS clean-generic clean-libtool \
-	clean-local clean-noinstLIBRARIES mostlyclean-am
+clean-am: clean-binPROGRAMS clean-calibrationPROGRAMS clean-generic \
+	clean-libtool clean-local clean-noinstLIBRARIES mostlyclean-am
 
 distclean: distclean-am
 	-rm -rf ./$(DEPDIR)
@@ -762,7 +824,7 @@ install-dvi: install-dvi-am
 
 install-dvi-am:
 
-install-exec-am: install-exec-local
+install-exec-am: install-binPROGRAMS install-exec-local
 
 install-html: install-html-am
 
@@ -802,26 +864,26 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-calibrationPROGRAMS
+uninstall-am: uninstall-binPROGRAMS uninstall-calibrationPROGRAMS
 
 .MAKE: install-am install-strip
 
 .PHONY: CTAGS GTAGS TAGS all all-am all-local check check-am clean \
-	clean-calibrationPROGRAMS clean-generic clean-libtool \
-	clean-local clean-noinstLIBRARIES cscopelist-am ctags ctags-am \
-	distclean distclean-compile distclean-generic \
+	clean-binPROGRAMS clean-calibrationPROGRAMS clean-generic \
+	clean-libtool clean-local clean-noinstLIBRARIES cscopelist-am \
+	ctags ctags-am distclean distclean-compile distclean-generic \
 	distclean-libtool distclean-local distclean-tags distdir dvi \
 	dvi-am html html-am info info-am install install-am \
-	install-calibrationPROGRAMS install-data install-data-am \
-	install-data-local install-dvi install-dvi-am install-exec \
-	install-exec-am install-exec-local install-html \
+	install-binPROGRAMS install-calibrationPROGRAMS install-data \
+	install-data-am install-data-local install-dvi install-dvi-am \
+	install-exec install-exec-am install-exec-local install-html \
 	install-html-am install-info install-info-am install-man \
 	install-pdf install-pdf-am install-ps install-ps-am \
 	install-strip installcheck installcheck-am installdirs \
 	maintainer-clean maintainer-clean-generic mostlyclean \
 	mostlyclean-compile mostlyclean-generic mostlyclean-libtool \
 	pdf pdf-am ps ps-am tags tags-am uninstall uninstall-am \
-	uninstall-calibrationPROGRAMS
+	uninstall-binPROGRAMS uninstall-calibrationPROGRAMS
 
 
 @CONFIG_KBUILD_TRUE@rtai_smi.ko: @RTAI_KBUILD_ENV@
@@ -860,6 +922,9 @@ install-data-local:
 	@chmod +x $(DESTDIR)$(calibrationdir)/run
 	$(INSTALL_SCRIPT) -m 755 setsmi $(DESTDIR)$(bindir)
 	@$(LN_S) -f $(bindir)/setsmi $(DESTDIR)$(bindir)/rstsmi
+
+@CONFIG_BUILD_SMISPV_TRUE@install-data-local:
+@CONFIG_BUILD_SMISPV_TRUE@	$(INSTALL_SCRIPT) -m 755 smispv $(DESTDIR)$(calibrationdir)
 
 run: all
 	@$(top_srcdir)/rtai-scripts/rtai-load --verbose
